feat: config is now per folder with neat promts to create it instead of hardcoded

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clone-deep": "^4.0.1",
     "expand-tilde": "^2.0.2",
     "fast-glob": "^3.2.12",
+    "inquirer": "^8.2.5",
     "jimp": "^0.16.2",
     "memoizerific": "^1.11.3",
     "three": "^0.146.0",
@@ -33,6 +34,7 @@
     "@types/chai": "^4",
     "@types/clone-deep": "^4.0.1",
     "@types/expand-tilde": "^2.0.0",
+    "@types/inquirer": "^8.2.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.3",
     "@types/three": "^0.146.0",
