--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
-    "test": "ts-node test/prepare-test-config.ts && mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "ts-node test/prepare-test-config.ts && TEST_OUTPUT=1 mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
