--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/three": "^0.146.0",
     "@types/xml2js": "^0.4.11",
     "chai": "^4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
@@ -71,7 +72,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
-    "test": "ts-node test/prepare-test-config.ts && TEST_OUTPUT=1 mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "ts-node test/prepare-test-config.ts && cross-env TEST_OUTPUT=1 mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
