--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -6,5 +6,5 @@ on:
 
 jobs:
   automerge:
-    uses: oclif/github-workflows/.github/workflows/automerge.yml@main
+    uses: axe312ger/github-workflows/.github/workflows/automerge.yml@main
     secrets: inherit
