--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    uses: oclif/github-workflows/.github/workflows/githubRelease.yml@main
+    uses: axe312ger/github-workflows/.github/workflows/githubRelease.yml@main
     secrets: inherit
 
   # most repos won't use this
