--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -12,7 +12,7 @@ on:
         required: true
 jobs:
   npm:
-    uses: oclif/github-workflows/.github/workflows/npmPublish.yml@main
+    uses: axe312ger/github-workflows/.github/workflows/npmPublish.yml@main
     with:
       tag: latest
       githubTag: ${{ github.event.release.tag_name || inputs.tag }}
