--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,4 +6,4 @@ on:
 
 jobs:
   unit-tests:
-    uses: oclif/github-workflows/.github/workflows/unitTest.yml@main
+    uses: axe312ger/github-workflows/.github/workflows/unitTest.yml@main
