--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
     "mocha": "^9",
+    "mocha-chai-jest-snapshot": "^1.1.4",
     "oclif": "^3",
     "shx": "^0.3.3",
     "ts-node": "^10.9.1",
