--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@oclif/core": "^1.19.1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.7",
+    "archiver": "^5.3.1",
     "chalk": "4",
     "clone-deep": "^4.0.1",
     "expand-tilde": "^2.0.2",
@@ -27,11 +28,13 @@
     "inquirer": "^8.2.5",
     "jimp": "^0.16.2",
     "memoizerific": "^1.11.3",
+    "pretty-bytes": "^5",
     "three": "^0.146.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@oclif/test": "^2.2.10",
+    "@types/archiver": "^5.3.1",
     "@types/chai": "^4",
     "@types/clone-deep": "^4.0.1",
     "@types/expand-tilde": "^2.0.0",
